[build-system]
requires = ["setuptools >= 75.2.0"]
build-backend = "setuptools.build_meta"

[project]
    name="racfu"
    version="1.0a1"
    requires-python = ">= 3.10"
    authors = [
        { name = "Joe Bostian", email = "jbostian@ibm.com" },
        { name = "Frank De Gilio", email = "degilio@us.ibm.com" },
        { name = "Leonard J. Carcaramo Jr", email = "lcarcaramo@ibm.com" },
        { name = "Elijah Swift", email = "elijah.swift@ibm.com" },
    ]
    maintainers = [
        { name = "Leonard J. Carcaramo Jr", email = "lcarcaramo@ibm.com" },
        { name = "Elijah Swift", email = "elijah.swift@ibm.com" },
    ]
    description="Python interface to RACF using RACF Callable Services."
    readme = "README.md"
    license = {text = "Apache-2.0"}
    classifiers=[
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: POSIX :: Other",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Security",
        "Topic :: System :: Hardware :: Mainframes",
        "Topic :: System :: Systems Administration",
    ]

[project.urls]
    Repository = "https://github.com/ambitus/racfu"
    Documentation = "https://ambitus.github.io/racfu/"

[tool.setuptools.packages.find]
    where = ["python"]
    include = ["racfu"]

[tool.setuptools.package-data]
    . = ['NOTICES.txt']
